<resources>
    <string name="app_name">NL2 Control Panel</string>
    <string name="gates">Gates</string>
    <string name="gates_open">Open</string>
    <string name="gates_close">Close</string>
    <string name="restraints">Restraints</string>
    <string name="restraints_open">Unlock</string>
    <string name="restraints_close">Lock</string>
    <string name="platform">Platform</string>
    <string name="platform_open">Raise</string>
    <string name="platform_close">Lower</string>
    <string name="flyercar">Car</string>
    <string name="flyercar_open">Unlock</string>
    <string name="flyercar_close">Lock</string>
    <string name="dispatch">Dispatch</string>
    <string name="connect_host">Host</string>
    <string name="connect_port">Port</string>
    <string name="connect">Connect</string>
    <string name="colon" translatable="false">:</string>
    <string name="default_port" translatable="false">15151</string>
    <string name="set_current_station">Set Station</string>
    <string name="manual_mode_enable">Switch to Manual Mode</string>
    <string name="manual_mode_disable">Switch to Auto Mode</string>
    <string name="emergency_stop_enable">Enable Emergency Stop</string>
    <string name="emergency_stop_disable">Disable Emergency Stop</string>
    <string name="lost_connection">Lost connection</string>
    <string name="not_in_play_mode">Not in Play Mode</string>
    <string name="connecting_failed">Could not connect</string>
    <string name="connected">Connected to NoLimits %1$s</string>
    <string name="invalid_port">Invalid port</string>
</resources>
