<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:id="@+id/activity_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:rowCount="3"
    android:columnCount="2"
    tools:context="me.jackdn.nl2controlpanel.MainActivity">

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/gates"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_margin="20dp">

        <TextView
            android:text="@string/gates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gates_title"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:textAlignment="center" />

        <Button
            android:text="@string/gates_open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:id="@+id/gates_open" />

        <Button
            android:text="@string/gates_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:id="@+id/gates_close" />
    </GridLayout>

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/restraints"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_margin="20dp">

        <TextView
            android:text="@string/restraints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restraints_title"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:textAlignment="center" />

        <Button
            android:text="@string/restraints_open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:id="@+id/restraints_open" />

        <Button
            android:text="@string/restraints_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:id="@+id/restraints_close" />
    </GridLayout>

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/platform"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_margin="20dp">

        <TextView
            android:text="@string/platform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/platform_title"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:textAlignment="center" />

        <Button
            android:text="@string/platform_open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:id="@+id/platform_open" />

        <Button
            android:text="@string/platform_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:id="@+id/platform_close" />
    </GridLayout>

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/flyercar"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_margin="20dp">

        <TextView
            android:text="@string/flyercar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/flyercar_title"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:textAlignment="center" />

        <Button
            android:text="@string/flyercar_open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:id="@+id/flyercar_open" />

        <Button
            android:text="@string/flyercar_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:id="@+id/flyercar_close" />
    </GridLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:id="@+id/dispatch"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill">

        <Button
            android:text="@string/dispatch"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:id="@+id/dispatch_a" />

        <Button
            android:text="@string/dispatch"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:id="@+id/dispatch_b" />

        <!--suppress AndroidMissingOnClickHandler -->
        <Button
            android:text="@string/set_current_station"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_toRightOf="@id/dispatch_a"
            android:layout_toLeftOf="@+id/dispatch_b"
            android:id="@+id/set_current_station"
            android:onClick="onClickSetStation" />
    </RelativeLayout>
</GridLayout>